# OptaTacticsProfiler

./: CRIPS-DM.ipynb  README.md  main.py  optimized_processing.py  pyproject.toml
