[project]
name = "optatacticsprofiler"
version = "0.1.0"
description = ""
authors = [
    {name = "C0deByCata",email = "rotarucatalinr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "soccerdata (>=1.8.7,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mplsoccer (>=1.5.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
ipykernel = "^6.29.5"

